# dyslexia_eyetracking

./: .gitignore  .gitmodules  CMakeLists.txt  notes.md  readme.md
hardware/: head_frame.SLDPRT
pupiltracking/src/: camutilties.py  main.py  pupilutilities.py  swirsky.cpp  test.ipynb
research/: dyslexic-reader-detector-report.docx
src/: main.py  makefile  naive.py  tobii.cpp  track-alpha.cpp
tobii/: makefile
tobii/src/: tobii.cpp  tobiitest.cpp
