cmake_minimum_required(VERSION 3.1)
project( dyslexia-eyetracking )
#set (CMAKE_PREFIX_PATH)
set (OpenCV_DIR "C:\\opencv\\")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( dyslexia-eyetracking ./src/track-alpha.cpp )
target_link_libraries( dyslexia-eyetracking ${OpenCV_LIBS} )